--- a/app/hero-detail.component.html
+++ b/app/hero-detail.component.html
@@ -8,5 +8,5 @@
         <label>name: </label>
         <input [(ngModel)]="hero.name" placeholder="name"/>
     </div>
-    <button (click)="goBack()">Back</buttion>
+    <button (click)="goBack()">Back</button>
 </div>
