--- a/app/dashboard.component.html
+++ b/app/dashboard.component.html
@@ -1,9 +1,9 @@
 <h3>Top Heroes</h3>
 <div class="grid grid-pad">
-  <div *ngFor="let hero of heroes" class="col-l-4">
+  <div *ngFor="let hero of heroes" [routerLink]="['/detail', hero.id]" class="col-l-4">
     <div class="module hero">
       <h4>{{hero.name}}</h4>
     </div>
   </div>
 </div>
-<a *ngFor="let hero of heroes" [routerLink]="['/detail', hero.id]" class="col-l-4">
+
