--- a/app/heroes.component.html
+++ b/app/heroes.component.html
@@ -11,4 +11,5 @@
         {{selectedHero.name | uppercase}} is my hero
       </h2>
       <button (clock)="gotoDetail()">View Details</button>
+      <button (click)="save()">Save</button>
     </div>
